# DataCore

./: .env.example  .gitignore  AUTHENTICATION_GUIDE.md  CHANGELOG.md  COMPLETION_REPORT.md  DEMO_USAGE_GUIDE.md  EXTENSION_GUIDE.md  LICENSE  MANIFEST.in  PROJECT_SUMMARY.md  QUICK_REFERENCE.md  README.md  USAGE_GUIDE.md  debug_login.py  debug_login_extended.py  draft.ipynb  examples.py  library_datacore.py  output.json  pyproject.toml  requirements.txt  setup.cfg  setup.py  test_auth_query.ipynb  test_demo.ipynb  test_dome2.ipynb  test_improved.py  test_pack2.ipynb  test_simple_api.py  verify.py
.github/workflows/: ci.yml  publish.yml
datacore/: __init__.py  client.py  pyvenv.cfg
datacore/Scripts/: activate  activate.bat
tests/: README.md  test_extensive.py
