[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "datacore-vn"
version = "1.0.0"
description = "Python client for the Datacore API (https://datacore.vn). Imported as `datacore`."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "DataCore Vietnam", email = "support@datacore.vn" },
]
keywords = ["datacore", "api", "client", "vietnam", "financial-data"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "requests>=2.31.0",
    "pandas>=2.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
polars = ["polars>=1.0.0"]
all    = ["polars>=1.0.0"]
dev    = [
    "polars>=1.0.0",
    "build>=1.0.0",
    "twine>=5.0.0",
    "ruff>=0.5.0",
    "nbformat>=5.9.0",
    "nbclient>=0.9.0",
    "ipykernel>=6.0.0",
]

[project.urls]
Homepage = "https://github.com/DataCore-VietNam/DataCore"
Repository = "https://github.com/DataCore-VietNam/DataCore"
Issues = "https://github.com/DataCore-VietNam/DataCore/issues"

[tool.setuptools]
packages = ["datacore"]

[tool.setuptools.package-data]
datacore = ["py.typed"]
