[metadata]
name = package-datacore
version = 0.1.0
description = Datacore Python client package
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
python_requires = >=3.8
include_package_data = True
install_requires =
    requests>=2.28
    pandas>=1.5
    tqdm>=4.65

[options.packages.find]
include =
    datacore
    datacore.*
